feat: add cursor on burger

--- a/shelter/pages/main/scss/layout/_header.scss
+++ b/shelter/pages/main/scss/layout/_header.scss
@@ -27,6 +27,7 @@
       height: 22px;
       flex-direction: column;
       gap: 8px;
+      cursor: pointer;
     }
     &-line {
       width: 100%;
