--- a/shelter/pages/pets/scss/layout/_header.scss
+++ b/shelter/pages/pets/scss/layout/_header.scss
@@ -28,6 +28,7 @@
       height: 22px;
       flex-direction: column;
       gap: 8px;
+      cursor: pointer;
     }
     &-line {
       width: 100%;
