--- a/shelter/pages/main/scss/style.css
+++ b/shelter/pages/main/scss/style.css
@@ -545,11 +545,21 @@ p {
 .navigation__link {
   text-decoration: none;
   color: #CDCDCD;
+  position: relative;
 }
 @media (hover: hover) {
   .navigation__link:hover {
     color: #FAFAFA;
   }
+}
+.navigation__link:active:hover::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 3px;
+  background-color: #F1CDB3;
+  bottom: -6px;
+  left: 0;
 }
 
 .-active {
