--- a/shelter/pages/pets/scss/components/_friends.scss
+++ b/shelter/pages/pets/scss/components/_friends.scss
@@ -87,7 +87,7 @@
     &-inactive {
       border: 2px solid $color-text-dark;
       color: $color-text-dark;
-      cursor: default;
+      cursor: not-allowed;
       @media (hover:hover) {
         &:hover {
           border: 2px solid $color-text-dark;
@@ -97,10 +97,11 @@
     }
     &-active {
       background-color: $color-primary;
+      cursor: default;
       @media (hover:hover) {
         &:hover {
-          border: 2px solid $color-primary-light;
-          background-color: $color-primary-light;
+          border: 2px solid $color-primary;
+          background-color: $color-primary;
         }
       }
     }
