--- a/shelter/pages/main/scss/style.css
+++ b/shelter/pages/main/scss/style.css
@@ -324,7 +324,7 @@ template {
   font-family: "Georgia-bold";
   src: url("../../../assets/fonts/georgia/georgia-bold.woff2") format("woff2"), url("../../../assets/fonts/georgia/georgia-bold.woff") format("woff");
 }
-.donation__number, .card__button, .card, .friends__btn, .friends__arrow, .not-only__link, .navigation__link {
+.donation__number, .card__button, .card, .friends__btn, .friends__arrow, .not-only__link, .navigation__link, .footer__link {
   transition: all 0.3s ease-out;
 }
 
@@ -587,6 +587,11 @@ p {
   padding-left: 42px;
   position: relative;
 }
+@media (hover: hover) {
+  .footer__link:hover {
+    color: #FDDCC4;
+  }
+}
 @media (max-width: 758px) {
   .footer__link {
     font-size: 2rem;
@@ -702,11 +707,21 @@ p {
 .navigation__link {
   text-decoration: none;
   color: #CDCDCD;
+  position: relative;
 }
 @media (hover: hover) {
   .navigation__link:hover {
     color: #FAFAFA;
   }
+}
+.navigation__link:active:hover::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 3px;
+  background-color: #F1CDB3;
+  bottom: -6px;
+  left: 0;
 }
 @media (max-width: 767px) {
   .navigation {
