--- a/shelter/pages/pets/scss/components/_friends.scss
+++ b/shelter/pages/pets/scss/components/_friends.scss
@@ -125,7 +125,7 @@
     &-inactive {
       border: 2px solid $color-text-dark;
       color: $color-text-dark;
-      cursor: default;
+      cursor: not-allowed;
       @media (hover:hover) {
         &:hover {
           border: 2px solid $color-text-dark;
