--- a/shelter/pages/pets/scss/style.css
+++ b/shelter/pages/pets/scss/style.css
@@ -324,7 +324,7 @@ template {
   font-family: "Georgia-bold";
   src: url("../../../assets/fonts/georgia/georgia-bold.woff2") format("woff2"), url("../../../assets/fonts/georgia/georgia-bold.woff") format("woff");
 }
-.pagination__button, .card__button, .card, .navigation__link {
+.pagination__button, .card__button, .card, .navigation__link, .footer__link {
   transition: all 0.3s ease-out;
 }
 
@@ -571,6 +571,11 @@ p {
   padding-left: 42px;
   position: relative;
 }
+@media (hover: hover) {
+  .footer__link:hover {
+    color: #FDDCC4;
+  }
+}
 @media (max-width: 758px) {
   .footer__link {
     font-size: 2rem;
@@ -686,11 +691,21 @@ p {
 .navigation__link {
   text-decoration: none;
   color: #545454;
+  position: relative;
 }
 @media (hover: hover) {
   .navigation__link:hover {
     color: #292929;
   }
+}
+.navigation__link:active:hover::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 3px;
+  background-color: #F1CDB3;
+  bottom: -6px;
+  left: 0;
 }
 @media (max-width: 767px) {
   .navigation {
@@ -855,7 +870,7 @@ p {
 .pagination__button-inactive {
   border: 2px solid #CDCDCD;
   color: #CDCDCD;
-  cursor: default;
+  cursor: not-allowed;
 }
 @media (hover: hover) {
   .pagination__button-inactive:hover {
