--- a/audio-player/style.scss
+++ b/audio-player/style.scss
@@ -81,6 +81,28 @@ $color-bg: rgb(119, 141, 124);
     font-family: 'Billabong';
     font-weight: 400;
   }
+  &__time-bar {
+    font-family: 'Billabong';
+    display: grid;
+    align-items: center;
+    grid-template-columns: 28px 225px 28px;
+    gap: 10px;
+    color: white;
+  }
+  &__progress-bar {
+    width: 100%;
+    height: 4px;
+    position: relative;
+    background-color: white;
+    border: 1px solid #232c1c;
+    border-radius: 20px;
+  }
+  &__progress-bar-active {
+    width: 20px;
+    height: 4px;  
+    background-color: #232c1c;
+    z-index: 1;
+  }
 }
 
 .conrols {
