--- a/random-game/scss/components/_forCategories.scss
+++ b/random-game/scss/components/_forCategories.scss
@@ -72,7 +72,7 @@
 }
 
 .halloween-wrapper {
-  background: url(./../assets/img/pngwing.png), Linear-gradient(rgb(73, 212, 254), rgb(13, 101, 237));
+  background: url(./../assets/img/pngwing.png), #355c7d;
   background-repeat: no-repeat;
   background-size: cover;
   z-index: -1;
