--- a/random-game/scss/layout/_footer.scss
+++ b/random-game/scss/layout/_footer.scss
@@ -1,6 +1,7 @@
 .footer {
   background-color: #355c7d;
   z-index: 1; 
+  height: 70px;
   &__wrapper {
     padding-top: 6px;
     padding-bottom: 6px;
