--- a/random-game/scss/components/_modal.scss
+++ b/random-game/scss/components/_modal.scss
@@ -22,7 +22,7 @@
 
 .modal__wrapper {
   display: flex;
-  flex-direction: column-reverse;
+  flex-direction: column;
   justify-content: space-between;
   align-items: center;
   background-size: contain;
@@ -30,7 +30,7 @@
   background-color: #355c7d;
   box-shadow: 12px 12px 8px 0px rgba(34, 60, 80, 0.2);
   width: 265px;
-  height: 370px;
+  height: 410px;
   border-radius: 10px;
   padding: 20px;
   cursor: default;
