--- a/random-game/scss/style.scss
+++ b/random-game/scss/style.scss
@@ -22,3 +22,4 @@
 @import "./components/games-screen";
 @import "./components/buttons";
 @import "./components/forCategories";
+@import "./components/feedback-modal";
