fix: change localStorage and add feedback on startScreen

--- a/random-game/scss/components/_buttons.scss
+++ b/random-game/scss/components/_buttons.scss
@@ -111,11 +111,11 @@
   border-radius: 5px;
   width: 128px;
   height: 25px;
-  background-color: #f67280;
-  border: 1px solid #f67280;
+  background-color: #c06c84;
+  border: 1px solid #c06c84;
   box-shadow: 12px 12px 8px 0px rgba(34, 60, 80, 0.2);
   font-size: 15px;
-  color: white;
+  color: black;
   cursor: pointer;
   @extend %transition;
   transform: scale(1);
@@ -124,8 +124,8 @@
   }
   @media (hover:hover) {
     &:hover {
-      background-color: #c06c84;
-      border: 1px solid #c06c84;
+      background-color: #c07a8e;
+      border: 1px solid #c07a8e;
     }
   }
 }
